figure.alignfull & fix name in style.css

--- a/sass/elements/_media.scss
+++ b/sass/elements/_media.scss
@@ -13,3 +13,7 @@ img {
 figure {
 	margin: 1em 0; // Extra wide images within figure tags don't overflow the content area.
 }
+
+figure.alignfull {
+	margin: 0;
+}
